# Capstone-2024-team-46

./: .gitignore  1dcnn_new_data.ipynb  AnomalySimulations.md  Moter_anomaly_detection.ipynb  Moter_anomaly_detection_1.ipynb  README.md  autoencoder.h5  autoencoder.ipynb  autoencoder_1-lstm.h5  autoencoder_1.h5  conv_net_classification_1.h5  conv_net_classification_1.tflite  conv_net_int8_v1.tflite  conv_net_model_without_softmax.tflite  conv_net_new_data_2.h5  conv_net_new_data_anomaly_15p.h5  conv_net_new_data_anomaly_15p_add_normal.h5  conv_net_new_data_anomaly_15p_add_normal.tflite  conv_net_new_data_anomaly_15p_add_normal_3.h5  conv_net_v1.h5  h5totflite.ipynb  main_functions.cc  model.cc  model_load.ipynb  test.ipynb  u-net_anomaly_detection.ipynb  u_net_with_aug_v2.h5
Anomaly_Detection_Prometheus/: CMakeLists.txt  sdkconfig  sdkconfig.old
Anomaly_Detection_Prometheus/main/: CMakeLists.txt  gatt_svr.cc  gatt_svr.h  idf_component.yml  main.cc  main_functions.cc  model.cc  model.h
data/: label_0_data.csv  label_2_data.csv  label_3_test4_output.csv  sensor_data_b.csv
data/anomaly_data/: anomaly_on_off_data.csv  anomaly_tape_contact_data_o.csv  anomaly_unstable_data_o.csv  anomaly_wind_noise_data_o.csv
data/normal_data_new/: normal_9v_common_noise_data.csv  normal_9v_vibration_noise_data.csv
models/h5/: autoencoder_1-1.h5  autoencoder_1-2.h5  autoencoder_2.h5  autoencoder_3.h5  conv_net_classification_1.h5  conv_net_new_data.h5  conv_net_new_data_2.h5  conv_net_new_data_3.h5  conv_net_new_data_anomaly_15p.h5  (+8 more)
web_page/: Anomaly Detection Notification.html
(+22 files in other folders)
